[package]
name = "pxp"
version = "0.1.0"
license = "Apache-2.0"
authors = ["danczw <github@prvc.cc>"]
edition = "2021"
readme = "README.md"
description = "Purge metadata from pictures and safeguard your personal information. A CLI written in Rust."

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.16.0"
